--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 06:05:23 2018</p>
+         Last Run: Wed Jul 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>41</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -50,43 +50,43 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>32</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
                         <td>47</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>33</td>
-                        <td>55</td>
+                        <td>24</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>47</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>35</td>
+                        <td>32</td>
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,7 +134,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "18",
                  "16"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "18",
                  "16"
                ]
@@ -205,8 +205,8 @@
                  "1",
                  "0",
                  "15",
-                 "33",
-                 "35"
+                 "24",
+                 "32"
                ]
              },
              {
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "44",
                  "47",
-                 "55",
+                 "56",
                  "67"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "32",
-                 "54",
-                 "47",
-                 "50"
+                 "38",
+                 "45",
+                 "64",
+                 "69",
+                 "51"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 06:05:23 2018</p>
+         Last Run: Wed Jul 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -284,7 +284,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>38</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -296,11 +296,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -320,11 +320,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>15</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "36",
-                 "33",
-                 "31",
-                 "30"
+                 "45",
+                 "38",
+                 "34",
+                 "32",
+                 "31"
                ]
              },
              {
@@ -466,9 +466,9 @@
                "data":[
                  "12",
                  "15",
-                 "15",
-                 "16",
-                 "15"
+                 "14",
+                 "13",
+                 "18"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 06:05:23 2018</p>
+         Last Run: Wed Jul 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -506,27 +506,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>46</td>
-                        <td>37</td>
+                        <td>Partly Cloudy</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>22</td>
+                        <td>38</td>
                         <td>2</td>
                         <td>18</td>
-                        <td>ENE</td>
-                        <td>50</td>
+                        <td>NE</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>46</td>
-                        <td>42</td>
+                        <td>24</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>NE</td>
-                        <td>50</td>
+                        <td>16</td>
+                        <td>NNE</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -536,21 +536,21 @@
                         <td>23</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>NE</td>
-                        <td>46</td>
+                        <td>16</td>
+                        <td>NNE</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>23</td>
-                        <td>56</td>
+                        <td>22</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>NNE</td>
-                        <td>50</td>
+                        <td>N</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -595,7 +595,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
+                 "25",
                  "24",
                  "23",
                  "21"
@@ -607,7 +607,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
+                 "25",
                  "24",
                  "23",
                  "21"
@@ -662,10 +662,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "46",
-                 "46",
+                 "22",
+                 "24",
                  "23",
-                 "23"
+                 "22"
                ]
              },
              {
@@ -673,10 +673,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "42",
+                 "38",
+                 "43",
                  "47",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -684,10 +684,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "50",
-                 "46",
-                 "50"
+                 "47",
+                 "45",
+                 "45",
+                 "45"
                ]
              }
            ]
