--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 07:05:03 2018</p>
+         Last Run: Wed Jul 25 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>1</td>
+                        <td>16</td>
                         <td>43</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>38</td>
+                        <td>SE</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>45</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>64</td>
+                        <td>SE</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>24</td>
-                        <td>56</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>69</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>32</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>51</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,10 +133,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "21",
-                 "21",
+                 "20",
+                 "19",
                  "18",
-                 "16"
+                 "15"
                ]
              },
              {
@@ -146,10 +146,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "21",
-                 "21",
+                 "20",
+                 "19",
                  "18",
-                 "16"
+                 "15"
                ]
              }
            ]
@@ -202,7 +202,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "16",
                  "0",
                  "15",
                  "24",
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "43",
-                 "44",
                  "47",
-                 "56",
-                 "67"
+                 "52",
+                 "59",
+                 "69"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
+                 "39",
                  "45",
+                 "54",
                  "64",
-                 "69",
-                 "51"
+                 "44"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 07:05:03 2018</p>
+         Last Run: Wed Jul 25 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -310,9 +310,9 @@
                         <td>0</td>
                         <td>32</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -452,7 +452,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "38",
                  "34",
                  "32",
@@ -464,10 +464,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "11",
                  "15",
                  "14",
-                 "13",
+                 "12",
                  "18"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 07:05:03 2018</p>
+         Last Run: Wed Jul 25 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -509,36 +509,36 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>22</td>
-                        <td>38</td>
+                        <td>18</td>
+                        <td>40</td>
                         <td>2</td>
                         <td>18</td>
                         <td>NE</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>24</td>
-                        <td>43</td>
+                        <td>23</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NNE</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>47</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>21</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>45</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -550,7 +550,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>45</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -597,7 +597,7 @@
                "data":[
                  "25",
                  "24",
-                 "23",
+                 "22",
                  "21"
                ]
              },
@@ -609,7 +609,7 @@
                "data":[
                  "25",
                  "24",
-                 "23",
+                 "22",
                  "21"
                ]
              }
@@ -662,9 +662,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "24",
+                 "18",
                  "23",
+                 "21",
                  "22"
                ]
              },
@@ -673,9 +673,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "43",
-                 "47",
+                 "40",
+                 "44",
+                 "48",
                  "55"
                ]
              },
@@ -684,10 +684,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "48",
                  "47",
-                 "45",
-                 "45",
-                 "45"
+                 "48",
+                 "48"
                ]
              }
            ]
