--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 09:05:03 2018</p>
+         Last Run: Wed Jul 25 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>16</td>
+                        <td>13</td>
                         <td>43</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>39</td>
+                        <td>ESE</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>24</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>44</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,7 +202,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
+                 "13",
                  "0",
                  "15",
                  "24",
@@ -215,9 +215,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "43",
-                 "47",
-                 "52",
-                 "59",
+                 "46",
+                 "51",
+                 "58",
                  "69"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "45",
-                 "54",
-                 "64",
-                 "44"
+                 "40",
+                 "46",
+                 "56",
+                 "66",
+                 "47"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 09:05:03 2018</p>
+         Last Run: Wed Jul 25 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -298,7 +298,7 @@
                         <td>0</td>
                         <td>34</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>14</td>
                      </tr>
@@ -308,7 +308,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>11</td>
                         <td>N</td>
@@ -455,7 +455,7 @@
                  "44",
                  "37",
                  "34",
-                 "31",
+                 "32",
                  "30"
                ]
              },
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 09:05:03 2018</p>
+         Last Run: Wed Jul 25 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -506,39 +506,39 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
                         <td>18</td>
                         <td>40</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NE</td>
-                        <td>48</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>21</td>
-                        <td>43</td>
+                        <td>23</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NNE</td>
-                        <td>47</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>20</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>21</td>
                         <td>48</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>22</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -597,7 +597,7 @@
                "data":[
                  "25",
                  "24",
-                 "23",
+                 "22",
                  "21"
                ]
              },
@@ -609,7 +609,7 @@
                "data":[
                  "25",
                  "24",
-                 "23",
+                 "22",
                  "21"
                ]
              }
@@ -663,8 +663,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "18",
+                 "23",
                  "21",
-                 "20",
                  "22"
                ]
              },
@@ -674,9 +674,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "40",
-                 "43",
+                 "44",
                  "48",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -684,10 +684,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "64",
+                 "63",
                  "48",
-                 "47",
-                 "47",
-                 "47"
+                 "48"
                ]
              }
            ]
